--- a/DRRadiov3/res/layout/afspiller_frag.xml
+++ b/DRRadiov3/res/layout/afspiller_frag.xml
@@ -44,16 +44,28 @@
         android:gravity="center_vertical"
         android:orientation="vertical">
 
-      <TextView
-          android:id="@+id/kanallogoOgDirektetekst"
-          android:layout_width="wrap_content"
-          android:layout_height="28dp"
-          android:text=" LIVE"
-          android:gravity="center_vertical"
-          tools:ignore="HardcodedText"
-          android:drawableLeft="@drawable/kanalappendix_ab4"
-          android:textColor="@color/grå40"
-          />
+      <LinearLayout android:layout_width="wrap_content"
+                    android:gravity="center_vertical"
+                    android:layout_height="28dp">
+        <ImageView
+            android:id="@+id/kanallogo"
+            android:layout_width="wrap_content"
+            android:layout_height="28dp"
+            android:src="@drawable/kanalappendix_ab4"
+            />
+
+
+        <TextView
+            android:id="@+id/direktetekst"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" LIVE"
+            tools:ignore="HardcodedText"
+            android:textColor="@color/grå40"
+            />
+
+      </LinearLayout>
+
 
 
       <TextView
