--- a/DRRadiov3/res/layout/afspiller_notifikation_stor.xml
+++ b/DRRadiov3/res/layout/afspiller_notifikation_stor.xml
@@ -2,91 +2,82 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:id="@+id/yderstelayout"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical">
-
-
-  <LinearLayout
       android:layout_width="match_parent"
-      android:gravity="left"
-      android:orientation="horizontal"
-      android:layout_height="match_parent">
+      android:layout_height="wrap_content"
+      android:contentDescription="afspillerkontrol"
+      android:gravity="center_vertical"
+      android:orientation="horizontal">
+
 
     <ImageView
-        android:layout_width="44dp"
+        android:layout_width="60dp"
         android:layout_height="44dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
-        tools:ignore="ContentDescription"
-        android:layout_gravity="center_vertical"
-        android:src="@drawable/ic_dr_icon"/>
-
-    <ImageView
-        android:id="@+id/startStopKnap"
+        android:scaleType="center"
         android:contentDescription="start/stop"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="5dp"
-        android:src="@drawable/ic_action_play"/>
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:id="@+id/startStopKnap"
+        android:src="@drawable/afspiller_spil"
+        />
 
     <LinearLayout
-        android:layout_height="fill_parent"
-        android:gravity="left"
-        android:orientation="vertical"
-        android:layout_marginTop="10dp"
-        android:layout_width="wrap_content">
+        android:layout_width="0px"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:layout_marginLeft="8dp"
+        android:gravity="center_vertical"
+        android:orientation="vertical">
 
-      <TextView
-          android:id="@+id/titel"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
+      <LinearLayout android:layout_width="wrap_content"
+                    android:gravity="center_vertical"
+                    android:layout_height="28dp">
+        <ImageView
+            android:id="@+id/kanallogo"
+            android:layout_width="wrap_content"
+            android:layout_height="28dp"
+            android:src="@drawable/kanalappendix_ab4"
+            />
 
-          android:text="P3 Live"
-          android:layout_marginLeft="12dp"
-          android:textStyle="bold"
-          android:maxLines="2"
-          tools:ignore="HardcodedText"
-          android:textColor="@color/hvid"/>
+
+        <TextView
+            android:id="@+id/direktetekst"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" LIVE"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText"
+            android:textColor="@color/grå40"
+            />
+
+      </LinearLayout>
+
 
       <TextView
           android:id="@+id/metainformation"
+          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_width="wrap_content"
-
-          android:layout_marginLeft="12dp"
-          android:text="P3"
+          android:textSize="@dimen/metainfo_skrifstørrelse"
+          android:text="Orientering på P1"
+          android:textStyle="bold"
           android:singleLine="true"
-          tools:ignore="HardcodedText"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_height="match_parent"
-        android:gravity="right"
-        android:orientation="horizontal"
-        android:layout_width="fill_parent">
-
-      <ProgressBar
-          android:id="@+id/progressBar"
-          android:layout_width="wrap_content"
-          android:layout_height="match_parent"
-          />
-
-      <ImageView
-          android:id="@+id/luk"
-          android:layout_width="32dp"
-          android:layout_height="32dp"
-          android:layout_marginTop="5dp"
-          android:layout_gravity="center_vertical"
-          android:layout_alignParentRight="true"
-          android:contentDescription="Luk D R Radio"
-          android:src="@drawable/ic_action_cancel"/>
-
+          tools:ignore="HardcodedText"
+          android:textColor="@color/grå40"/>
 
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+
+  <ImageView
+      android:id="@+id/luk"
+      android:layout_width="32dp"
+      android:layout_height="match_parent"
+      android:padding="4dp"
+      android:layout_gravity="center_vertical"
+      android:contentDescription="Luk D R Radio"
+      android:src="@drawable/dri_luk_graa40"/>
+
   </LinearLayout>
-
-
-</LinearLayout>
